--- a/schoolApp/src/main/res/layout/activity_single_teacher_homework.xml
+++ b/schoolApp/src/main/res/layout/activity_single_teacher_homework.xml
@@ -60,80 +60,88 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical" >
-        
-        <TextView
-            android:id="@+id/tv_homework_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dip"
-            android:textColor="@color/black"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textSize="14sp"
-            android:textStyle="italic|bold" />
-
-        <com.champs21.schoolapp.viewhelpers.ExpandableTextView
-            android:id="@+id/txtContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dip"
-            android:textColor="@color/black"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textStyle="italic" />
-
-        
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/layoutDownloadHolder"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:visibility="gone" >
-
-            <ImageButton
-                android:id="@+id/btnDownload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_download" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/bottmlay"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textlay"
-            android:background="@android:color/white"
+            android:background="@color/white"
             android:orientation="vertical" >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dip"
-                android:background="@color/gray_2" >
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layoutBottomPanel"
+            <TextView
+                android:id="@+id/tv_homework_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:layout_margin="10dip"
+                android:textColor="@color/black"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="14sp"
+                android:textStyle="italic|bold" />
 
-                <com.champs21.schoolapp.viewhelpers.CustomButton
-                    android:id="@+id/btn_done"
+            <com.champs21.schoolapp.viewhelpers.ExpandableTextView
+                android:id="@+id/txtContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dip"
+                android:textColor="@color/black"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textStyle="italic" />
+
+
+
+            <LinearLayout
+                android:id="@+id/layoutDownloadHolder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:visibility="gone" >
+
+                <ImageButton
+                    android:id="@+id/btnDownload"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/general_btn"
-                    android:clickable="true"
-                    android:gravity="center"
-                    custom:iconImage="@drawable/done_normal"
-                    custom:iconText="@string/btn_done" />
+                    android:background="@drawable/btn_download" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/bottmlay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textlay"
+                android:background="@android:color/white"
+                android:orientation="vertical" >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dip"
+                    android:background="@color/gray_2" >
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layoutBottomPanel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <com.champs21.schoolapp.viewhelpers.CustomButton
+                        android:id="@+id/btn_done"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/general_btn"
+                        android:clickable="true"
+                        android:gravity="center"
+                        custom:iconImage="@drawable/done_normal"
+                        custom:iconText="@string/btn_done" />
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
