--- a/schoolApp/src/main/res/layout/row_spellingbee_leaderboard.xml
+++ b/schoolApp/src/main/res/layout/row_spellingbee_leaderboard.xml
@@ -47,6 +47,12 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/white" />
 
+        <TextView
+            android:id="@+id/txtTimeTaken"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 
 </LinearLayout>
