--- a/schoolApp/src/main/res/layout/fragment_lessonplan_student_parent.xml
+++ b/schoolApp/src/main/res/layout/fragment_lessonplan_student_parent.xml
@@ -70,15 +70,36 @@
             android:background="@android:color/white"
             android:layout_marginBottom="10dp">
 
-            <ListView
-                android:id="@+id/listViewLessonPlanStudentParent"
-                android:layout_width="match_parent"
-                android:cacheColorHint="@android:color/transparent"
-                android:divider="@color/gray_2"
-                android:dividerHeight="2dp"
-                android:layout_height="wrap_content">
 
-            </ListView>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ListView
+                    android:id="@+id/listViewLessonPlanStudentParent"
+                    android:layout_width="match_parent"
+                    android:cacheColorHint="@android:color/transparent"
+                    android:divider="@color/gray_2"
+                    android:dividerHeight="2dp"
+                    android:layout_height="wrap_content">
+
+                </ListView>
+
+                <TextView
+                    android:id="@+id/txtMessage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="No data found!"
+                    android:textColor="@color/maroon"
+                    android:gravity="center"
+                    android:background="@android:color/white"
+                    android:visibility="gone"
+                    android:textStyle="bold"
+                    android:textSize="22sp"/>
+
+            </FrameLayout>
+
+
 
         </LinearLayout>
 
