--- a/schoolApp/src/main/res/layout/fragment_meeting2.xml
+++ b/schoolApp/src/main/res/layout/fragment_meeting2.xml
@@ -187,6 +187,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true" />
+
+
+            <TextView
+                android:id="@+id/txtMessage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="No data found!"
+                android:textColor="@color/maroon"
+                android:gravity="center"
+                android:background="@android:color/white"
+                android:visibility="gone"
+                android:textStyle="bold"
+                android:textSize="22sp"/>
+
+
+
         </RelativeLayout>
         
     </RelativeLayout>
