--- a/schoolApp/src/main/res/layout/student_list_fragment_layout.xml
+++ b/schoolApp/src/main/res/layout/student_list_fragment_layout.xml
@@ -105,16 +105,46 @@
         <requestFocus />
     </EditText>
 
-    <ListView
-        android:id="@+id/listview"
+
+
+
+    <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_below="@+id/search"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_weight="1"
-        android:divider="@color/gray_bg"
-        android:dividerHeight="1dp" />
+        android:layout_weight="1">
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:divider="@color/gray_bg"
+            android:dividerHeight="1dp" />
+
+        <TextView
+            android:id="@+id/txtMessage"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="No data found!"
+            android:textColor="@color/maroon"
+            android:gravity="center"
+            android:background="@android:color/white"
+            android:visibility="gone"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="22sp"/>
+
+    </FrameLayout>
+
+
+
+
+
+
 
     <View
         android:layout_width="match_parent"
