--- a/schoolApp/src/main/res/layout/fragment_transport.xml
+++ b/schoolApp/src/main/res/layout/fragment_transport.xml
@@ -181,7 +181,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@android:color/white"
-                android:orientation="vertical" >
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -275,13 +275,38 @@
                             android:textSize="12sp" />
                     </LinearLayout>
                 </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layoutListHolder"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-                </LinearLayout>
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:id="@+id/layoutListHolder"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/layoutMessage"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="10dp"
+                        android:background="@android:color/white"
+                        android:gravity="center"
+                        android:visibility="visible" >
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:textColor="@color/maroon"
+                            android:text="No data available!"
+                            android:gravity="center"
+                            android:layout_centerInParent="true"
+                            android:textStyle="bold"/>
+
+
+                    </RelativeLayout>
+                </FrameLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
