--- a/schoolApp/src/main/res/layout/complete_profile_student_fragment.xml
+++ b/schoolApp/src/main/res/layout/complete_profile_student_fragment.xml
@@ -581,7 +581,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
+                android:visibility="gone"
                 android:gravity="center"
                 android:orientation="horizontal" >
 
