1. Added ellipsized text at row_notification.xml for shoying notification details for maximum of 2 lines.

--- a/schoolApp/src/main/res/layout/row_notification.xml
+++ b/schoolApp/src/main/res/layout/row_notification.xml
@@ -41,6 +41,8 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:text="SOME DESCRIPTION"
+				android:maxLines="2"
+				android:ellipsize="end"
 	            android:textColor="@color/black"/>
 	    </LinearLayout>
 	</LinearLayout>
