--- a/schoolApp/src/main/res/layout/activity_single_notice.xml
+++ b/schoolApp/src/main/res/layout/activity_single_notice.xml
@@ -161,11 +161,28 @@
 
                 </LinearLayout>
 
+
+                <LinearLayout
+                    android:id="@+id/layoutDownloadHolder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:visibility="gone" >
+
+                    <ImageButton
+                        android:id="@+id/btnDownload"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/btn_download" />
+                </LinearLayout>
+
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="2dip"
                     android:background="@color/gray_2" >
                 </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
