1. Added new modified data for this year (2015) from content team. 2. Done different bug fixing and modifications in different classes and associated xml layout files. 3. Added new enter button in SpellingbeeTestActivity.java and removed 'bloop' button. 4. Added new application version name and version code in manifest file i.e AndroidManifest.xml. 5. Added new version name as string in strings.xml file.

--- a/schoolApp/src/main/res/layout/activity_create_meeting_request.xml
+++ b/schoolApp/src/main/res/layout/activity_create_meeting_request.xml
@@ -296,7 +296,7 @@
                         android:background="@color/gray_2"
                         android:ems="10"
                         android:gravity="top"
-                        android:hint="write your description"
+                        android:hint="Write your description"
                         android:inputType="textMultiLine"
                         android:padding="5dp"
                         android:textColor="@android:color/black"
