1. Added new bloop graphics and banner as needed. 2. Done some modifications and changes in layouts, selectors and graphics.

--- a/schoolApp/src/main/res/layout/activity_spelling_demo.xml
+++ b/schoolApp/src/main/res/layout/activity_spelling_demo.xml
@@ -228,7 +228,7 @@
                         android:layout_marginLeft="10dp"
                         android:textStyle="bold"
                         android:layout_toLeftOf="@+id/btnEnter"
-                        android:inputType="textFilter|textCapCharacters"
+                        android:inputType="textFilter|textNoSuggestions|textCapCharacters|textVisiblePassword"
                         android:layout_alignParentLeft="true"
                         android:background="@android:color/transparent"
                         android:textCursorDrawable="@drawable/color_cursor"
