--- a/schoolApp/src/main/res/layout/textview_custom_spinner.xml
+++ b/schoolApp/src/main/res/layout/textview_custom_spinner.xml
@@ -7,4 +7,5 @@
     android:ellipsize="marquee"
     android:textColor="@android:color/black"
     android:textSize="18sp"
+    android:gravity="center"
     android:textAlignment="inherit"/>
