--- a/schoolApp/src/main/res/layout/fragment_school_feed.xml
+++ b/schoolApp/src/main/res/layout/fragment_school_feed.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.handmark.pulltorefresh.library.PullToRefreshListViewCustom
+        <com.handmark.pulltorefresh.library.PullToRefreshListView
             android:id="@+id/listView_category"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
