--- a/schoolApp/src/main/res/layout/fragment_paidverision_summery.xml
+++ b/schoolApp/src/main/res/layout/fragment_paidverision_summery.xml
@@ -75,29 +75,14 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/summary_student_text_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:text="My "
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textColor="@color/gray_1"
+                android:textSize="14sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Diary"
-                android:textColor="@color/red"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="21"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
@@ -697,6 +682,7 @@
             android:orientation="horizontal" >
 
             <ImageView
+                android:id="@+id/summary_routine_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -709,6 +695,7 @@
                 android:background="@color/gray_2" />
 
             <TextView
+                android:id="@+id/summery_routine_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -731,6 +718,7 @@
         android:orientation="horizontal" >
 
         <ImageView
+            android:id="@+id/summery_homework_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/sum_homework" />
@@ -747,6 +735,7 @@
             android:orientation="horizontal" >
 
             <TextView
+                android:id="@+id/summery_homework_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tomorrow&apos;s"
@@ -754,6 +743,7 @@
                 android:textSize="16sp" />
 
             <TextView
+                android:id="@+id/summery_homework_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -847,6 +837,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="visible"
         android:id="@+id/sum_lay_notice"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
@@ -858,6 +849,7 @@
         android:orientation="horizontal" >
 
         <RelativeLayout
+            android:id="@+id/notice_icon_lay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/red" >
@@ -875,6 +867,7 @@
             android:background="@color/gray_2" />
 
         <TextView
+            android:id="@+id/notice_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -895,6 +888,7 @@
         android:orientation="horizontal" >
 
         <ImageView
+            android:id="@+id/summary_event_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/sum_event" />
@@ -927,6 +921,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
+            android:id="@+id/summery_exam_tomorrow_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/red" >
@@ -948,6 +943,7 @@
             android:orientation="horizontal" >
 
             <TextView
+                android:id="@+id/summery_exam_tomorrow_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -956,6 +952,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/summery_exam_tomorrow_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -978,6 +975,7 @@
         android:orientation="horizontal" >
 
         <LinearLayout
+            android:id="@+id/summary_exam_routine_publish_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/red" >
@@ -1032,6 +1030,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/summery_result_publish_good_luck_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Good Luck."
@@ -1045,6 +1044,7 @@
             android:background="@color/gray_2" />
 
         <ImageView
+            android:id="@+id/summery_result_publish_icon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
