--- a/schoolApp/src/main/res/layout/activity_login.xml
+++ b/schoolApp/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/classtune_logo_top" />
+            android:src="@drawable/ct_splash" />
     </RelativeLayout>
 
     <LinearLayout
