--- a/schoolApp/src/main/res/layout/fragment_paidverision_summery.xml
+++ b/schoolApp/src/main/res/layout/fragment_paidverision_summery.xml
@@ -636,6 +636,7 @@
             android:orientation="horizontal" >
 
             <ImageView
+                android:id="@+id/summary_attendance_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/sum_attendance" />
@@ -963,7 +964,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/sum_lay_exam_routine_publish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
