--- a/schoolApp/src/main/res/layout/popup_layout.xml
+++ b/schoolApp/src/main/res/layout/popup_layout.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="25dp"
             android:src="@drawable/candle_popup_icon" />
     </RelativeLayout>
 
@@ -49,6 +49,8 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:padding="10dp" >
 
         <TextView
@@ -59,6 +61,7 @@
             android:textColor="@color/black" />
 
         <ImageButton
+            android:visibility="gone"
             android:id="@+id/popup_btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
